# mindweather

./: .flake8  .gitignore  AGENTS.md  README.md  abliterate_weights.py  actadd.py  advbench_results.json  advbench_results_ablitAll.json  advbench_results_ablitL13.json  advbench_results_restore.json  advbench_results_restore_L13.json  arc_benchmark_results.json  benchmark_arc.py  compare_layers.py  compare_sae_vs_actadd.py  confirmed_refusals.json  discover_features_layer.py  discover_safety_features.py  entanglement_results.json  eval_advbench.py  eval_finetune_attack.py  eval_finetune_attack_baseline.json  eval_full_advbench.py  eval_full_advbench_results.json  eval_lora_attack.py  eval_lora_attack_d1024_results.json  eval_lora_attack_d512_results.json  eval_lora_attack_results.json  eval_lora_attack_robust_results.json  eval_multi_layer_adapter.py  eval_multi_layer_adapter_results.json  eval_prompt_injection.py  eval_prompt_injection_baseline.json  eval_prompt_injection_defended.json  eval_prompt_injection_v3.json  eval_wout_ablation.py  eval_wout_ablation_k15.json  eval_wout_ablation_k20.json  eval_wout_ablation_k5.json  eval_wout_ablation_results.json  (+27 more)
docs/: emotion_steering.md  experiments.md  safety_defense.md
mindweather/: __init__.py  abliterate.py  adapter.py  data.py  safety.py
notebooks/: 01_load_sanity.ipynb  02_find_features.ipynb  02b_find_styles_personas.ipynb
